native/crates/specular-scene/tests/snapshots/comments__the_composer_keeps_its_pixel_size_zoomed_in.snap
---
source: crates/specular-scene/tests/comments.rs
expression: app.scene_snapshot()
---
canvas page p1 100,100 400x300 r=8
screen rect 200,200 800x600 r=16 stroke=#a6a09b/1/outside
screen text "example.com/p1" 200,179.5 wrap=800 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=200,179.5 800x20.5
canvas page p2 700,100 400x300 r=8
screen rect 1400,200 800x600 r=16 stroke=#a6a09b/1/outside
screen text "example.com/p2" 1400,179.5 wrap=800 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=1400,179.5 800x20.5
screen ellipse 1194,994 12x12 fill=#2b7fff33 stroke=#2b7ffff2/2/inside
screen rect 199,199 802x602 stroke=#3b82f6/1/inside
screen rect 1214,987 260x31.4 r=10 fill=#ffffff stroke=#9f9fa9cc/1/inside
canvas text "hi" 612,497.5 wrap=120 5.5/7.7 #18181b
screen rect 1264,995 2x40 fill=#18181b
